dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(diff-ext, 0.1)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

pkg_modules="libnautilus-extension >= 2.14.0 pango >= 1.12.0 cairo >= 1.0.0 atk >= 1.11.0 glib-2.0 >= 2.10.0"
PKG_CHECK_MODULES(DIFF_EXT, [$pkg_modules])
AC_SUBST(DIFF_EXT_CFLAGS)
AC_SUBST(DIFF_EXT_LIBS)

GETTEXT_PACKAGE=diff-ext
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [Package name for gettext])

dnl Languages which your application supports
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

AM_PROG_LIBTOOL

dnl Set DIFF-EXT_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(DIFF-EXT_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale", [Package local directory])
else
  AC_DEFINE_UNQUOTED(DIFF_EXT_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale", [Package local directory])
fi

dnl Set PACKAGE SOURCE DIR in config.h.
packagesrcdir=`cd $srcdir && pwd`

dnl Set PACKAGE PREFIX
if test "x${prefix}" = "xNONE"; then
  packageprefix=${ac_default_prefix}
else
  packageprefix=${prefix}
fi

dnl Set PACKAGE DATA & DOC DIR
packagedatadir=share
packagedocdir=doc/${PACKAGE}

dnl Set PACKAGE DIRS in config.h.
packagepixmapsdir=${packagedatadir}/pixmaps
packagehelpdir=${packagedatadir}/help
packagemenudir=${packagedatadir}

dnl Subst DIFF_EXT_DATA_DIR.
NO_PREFIX_DIFF_EXT_DATA_DIR="${packagedatadir}"
AC_SUBST(NO_PREFIX_DIFF_EXT_DATA_DIR)
DIFF_EXT_DATA_DIR="${packageprefix}/${packagedatadir}"
AC_SUBST(DIFF_EXT_DATA_DIR)

dnl Subst DIFF_EXT_DOC_DIR.
NO_PREFIX_DIFF_EXT_DOC_DIR="${packagedocdir}"
AC_SUBST(NO_PREFIX_DIFF_EXT_DOC_DIR)
DIFF_EXT_DOC_DIR="${packageprefix}/${packagedocdir}"
AC_SUBST(DIFF_EXT_DOC_DIR)

dnl Subst DIFF_EXT_PIXMAPS_DIR.
NO_PREFIX_DIFF_EXT_PIXMAPS_DIR="${packagepixmapsdir}"
AC_SUBST(NO_PREFIX_DIFF_EXT_PIXMAPS_DIR)
DIFF_EXT_PIXMAPS_DIR="${packageprefix}/${packagepixmapsdir}"
AC_SUBST(DIFF_EXT_PIXMAPS_DIR)

dnl Subst DIFF_EXT_HELP_DIR.
NO_PREFIX_DIFF_EXT_HELP_DIR="${packagehelpdir}"
AC_SUBST(NO_PREFIX_DIFF_EXT_HELP_DIR)
DIFF_EXT_HELP_DIR="${packageprefix}/${packagehelpdir}"
AC_SUBST(DIFF_EXT_HELP_DIR)

dnl Subst DIFF_EXT_MENU_DIR.
NO_PREFIX_DIFF_EXT_MENU_DIR="${packagemenudir}"
AC_SUBST(NO_PREFIX_DIFF_EXT_MENU_DIR)
DIFF_EXT_MENU_DIR="${packageprefix}/${packagemenudir}"
AC_SUBST(DIFF_EXT_MENU_DIR)

AC_DEFINE_UNQUOTED(DIFF_EXT_DATA_DIR, "${packageprefix}/${packagedatadir}")
AC_DEFINE_UNQUOTED(DIFF_EXT_DOC_DIR, "${packageprefix}/${packagedocdir}")
AC_DEFINE_UNQUOTED(DIFF_EXT_PIXMAPS_DIR, "${packageprefix}/${packagepixmapsdir}")
AC_DEFINE_UNQUOTED(DIFF_EXT_HELP_DIR, "${packageprefix}/${packagehelpdir}")
AC_DEFINE_UNQUOTED(DIFF_EXT_MENU_DIR, "${packageprefix}/${packagemenudir}")
AC_DEFINE_UNQUOTED(DIFF_EXT_SOURCE_DIR, "${packagesrcdir}")

AC_OUTPUT([
Makefile
po/Makefile.in
src/Makefile
])
